--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@
       font-weight: bold;
   }
   
-  nav button {
+  #getStarted {
       background: linear-gradient(180deg, #FF4C4C 0%, #A94E97 100%);
   border-radius: 28px;
       border: none;
