--- a/style.css
+++ b/style.css
@@ -122,6 +122,34 @@
       font-weight: 700;
       display: flex;
   }
+
+  .getStartedCard {
+    height: 600px;
+    width: 80%;
+    box-shadow: 4px 8px 8px lightgray;
+    border-radius: 15px;
+    margin: 80px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .getStartedCard form {
+    background-color: lightgray;
+    width: 80%;
+    height: 95%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  
+  .getStartedCard input{
+    width: 30%;
+  }
+
+  textarea {
+    width: 50%;
+  }
   
   @media(max-width: 400px) {
       .grid-container {
