--- a/style.css
+++ b/style.css
@@ -174,6 +174,12 @@
       width: 150px;
       height: 40px;
   }
+      
+      
+  .formButtons input:hover {
+        background-color: #c58ab9;
+        cursor: pointer;
+  }
   
   @media(max-width: 400px) {
       .grid-container {
