--- a/style.css
+++ b/style.css
@@ -125,14 +125,19 @@
   }
 
   .getStartedCard {
-    height: 700px;
+    height: 1000px;
     width: 80%;
     box-shadow: 4px 8px 8px lightgray;
     border-radius: 15px;
     margin: 80px;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+  }
+
+  .getStartedCard h1 {
+    margin: 40px;
   }
 
   .getStartedCard form {
